# plain-litassets

./: Cargo.toml  README.md
ltc_mainchain_adapter/: Cargo.toml  build.rs
ltc_mainchain_adapter/src/: litecoin_client.rs  main.rs
