[package]
name    = "ltc_mainchain_adapter"
version = "0.1.0"
edition = "2024"
build   = "build.rs"

[dependencies]
anyhow          = { workspace = true }
bitcoincore-rpc = { workspace = true }
tokio           = { workspace = true, features = ["full"] }
tokio-stream    = { workspace = true }
tonic           = { workspace = true }
prost           = { workspace = true }
prost-types     = { workspace = true }
serde           = { workspace = true, features = ["derive"] }
serde_json      = { workspace = true }
zmq             = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
